# rust-cargo-docs-rag-mcp

./: .dockerignore  .pr-summary.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cog.toml  justfile  package.yml  server.json
.github/workflows/: ci.yml  docker.yml  release-and-publish.yml
docker/: entrypoint.sh
pkgx/: pkgx.yaml
pkgx/projects/github.com/promptexecution/rust-cargo-docs-rag-mcp/: package.yml
scripts/: set-version.sh
src/tools/: tldr.rs
src/tools/docs/: docs.rs
tests/: integration_tests.rs
