[package]
name = "rust-cargo-docs-rag-mcp"
version = "0.3.0"
edition = "2021"
description = "Rust Documentation MCP Server for LLM crate assistance"
authors = ["Brian Horakh <brianh@promptexecution.com>",
"Claude <noreply@anthropic.com>"]
license = "MIT"
repository = "https://github.com/promptexecution/rust-cargo-docs-rag-mcp"

[workspace]
members = [
    ".",
]

[dependencies]
# MCP dependencies from GitHub
mcp-server = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "c0bd94dd85a3535cb1580424465140d51bab2a17", package = "mcp-server" }
mcp-core = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "c0bd94dd85a3535cb1580424465140d51bab2a17", package = "mcp-core" }
mcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "c0bd94dd85a3535cb1580424465140d51bab2a17", package = "mcp-macros" }

# Tokenizer dependency for token count functionality
tokenizers = { version = "0.21.2", features = ["http"] }

# HTTP and networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.8", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"]}
tower = { version = "0.4", features = ["util"] }
tower-service = "0.3"
hyper = "0.14"

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
html2md = "0.2.14"
regex = "1"
syn = { version = "2.0.104", features = ["full"] }
flate2 = "1.1.2"
tar = "0.4.44"

[dev-dependencies]
# Testing utilities
mockito = "1.2"

# Main binary with subcommands
[[bin]]
name = "cratedocs"
path = "src/bin/cratedocs.rs"
